# new-project

./: .gitignore  README.md  pyproject.toml
appstore-screenshots/: README.md  package.json  pnpm-lock.yaml
appstore-screenshots/src/app/: globals.css  layout.tsx  page.tsx
reports/: 84c7_integrity_findings.md  astro25_decoded_tables.md  astro25_file_anatomy.md  blankcp_corpus_findings.md  macos_privileged_binaries_poc_guide.md  writer_status.md  xts5000_write_path_findings.md
scripts/: macos_privileged_pocs.py  make_xts5000_trial_patch.py  validate_writer_against_samples.py
src/astro25_decoder/: __init__.py  cli.py  decoder.py  writer.py
